clinical paper changes

--- a/report/clinical/bibliography.bib
+++ b/report/clinical/bibliography.bib
@@ -9,6 +9,28 @@
   publisher={Elsevier}
 }
 
+@article{bruinsma2017expert,
+  title={Expert consensus document: semantics in active surveillance for men with localized prostate cancer—results of a modified Delphi consensus procedure},
+  author={Bruinsma, Sophie M and Roobol, Monique J and Carroll, Peter R and Klotz, Laurence and Pickles, Tom and Moore, Caroline M and Gnanapragasam, Vincent J and Villers, Arnauld and Rannikko, Antti and Valdagni, Riccardo and others},
+  journal={Nature reviews urology},
+  volume={14},
+  number={5},
+  pages={312},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+@article{loeb2013systematic,
+  title={Systematic review of complications of prostate biopsy},
+  author={Loeb, Stacy and Vellekoop, Annelies and Ahmed, Hashim U and Catto, James and Emberton, Mark and Nam, Robert and Rosario, Derek J and Scattoni, Vincenzo and Lotan, Yair},
+  journal={European urology},
+  volume={64},
+  number={6},
+  pages={876--892},
+  year={2013},
+  publisher={Elsevier}
+}
+
 @article{royston2013external,
   title={External validation of a Cox prognostic model: principles and methods},
   author={Royston, Patrick and Altman, Douglas G},
