--- a/report/clinical/main_manuscript.tex
+++ b/report/clinical/main_manuscript.tex
@@ -12,9 +12,9 @@
 \renewcommand{\headrulewidth}{0pt}
 \fancyhead[R]{\thepage}
 
-\usepackage{fig2vect}
+%\usepackage{fig2vect}
 \usepackage{graphicx}
-\usepackage{svg}
+%\usepackage{svg}
 \usepackage{booktabs}
 %\usepackage[swedish, english]{babel}
 
