--- a/report/clinical/mainmatter/abstract.tex
+++ b/report/clinical/mainmatter/abstract.tex
@@ -1,16 +1,16 @@
 % !TEX root =  ../main_manuscript.tex 
 \begin{abstract}
-\texttt{Background}: Prostate cancer active surveillance (AS) patients undergo repeat biopsies. Treatment commonly advised when biopsy Gleason~grade~$\geq$~2 (reclassification). Many patients never experience reclassification, yet undergo biopsies frequently. Reclassification risk based personalized biopsy schedules may reduce patient burden.\\
+\texttt{Background}: Prostate cancer active surveillance (AS) patients undergo repeat biopsies. Active treatment advised when biopsy Gleason grade group~$\geq$~2 (upgrading). Many patients never experience upgrading, yet undergo biopsies frequently. Upgrading-risk based personalized biopsy decisions may reduce patient burden.\\
 
-\texttt{Objective}: Develop web-application to assist patients/doctors make better biopsy decisions than fixed biopsies.\\
+\texttt{Objective}: Develop risk prediction model and web-application to assist patients/doctors in personalized biopsy decisions.\\
 
-\texttt{Design, Setting, and Participants}: Model development: World's largest AS study PRIAS, 7813 patients, 1134 experienced reclassification; External validation: largest five GAP3 database cohorts; Data: prostate-specific antigen (PSA), repeat biopsy Gleason grade.\\
+\texttt{Design, Setting, and Participants}: Model development: world's largest AS study PRIAS, 7813 patients, 1134 experienced upgrading; External validation: largest five cohorts of Movember Foundation's GAP3 database (>20,000 patients, 27 centers worldwide); Data: repeat prostate-specific antigen (PSA) and biopsy Gleason grade.\\
 
-\texttt{Outcome Measurements, and Statistical Analysis}: Bayesian joint model fitted to PRIAS dataset. Model predicted patient-specific reclassification risk utilized for personalized biopsy decisions. Model validated in GAP3 cohorts using risk prediction error, calibration, area under ROC (AUC). Risk calculator, personalized schedules implemented in web-application, for PRIAS and validated GAP3 cohorts.\\
+\texttt{Outcome Measurements, and Statistical Analysis}: Bayesian joint model fitted to PRIAS dataset. Model validated in GAP3 cohorts using risk prediction error, calibration, area under ROC (AUC). Model and personalized biopsy schedules based on predicted risks implemented in web-application.\\
 
-\texttt{Results and Limitations}: Reclassification rate at year five of follow-up: 35\% in PRIAS, at most 50\% in GAP3 cohorts. PSA velocity stronger predictor of reclassification (Hazard~Ratio:~2.47, 95\%CI:~1.93--2.99), than PSA value (Hazard~Ratio:~0.99, 95\%CI:~0.89--1.11). Validation: Moderate AUC (0.55--0.75) in PRIAS and GAP3 cohorts. Moderate prediction error (0.1--0.3) in GAP3 cohorts with Reclassification rate similar to PRIAS, large (0.3--0.45) otherwise. Model recalibrated for external GAP3 cohorts.\\
+\texttt{Results and Limitations}: Cause-specific cumulative-risk of upgrading at year five of follow-up: 35\% in PRIAS, at most 50\% in GAP3 cohorts. PSA velocity stronger predictor of upgrading (Hazard~Ratio:~2.47, 95\%CI:~1.93--2.99) than PSA value (Hazard~Ratio:~0.99, 95\%CI:~0.89--1.11). Validation: Moderate AUC (0.55--0.75) in PRIAS and GAP3 cohorts. Moderate prediction error (0.1--0.3) in GAP3 cohorts with upgrading rate similar to PRIAS, but large (0.3--0.45) otherwise. Recalibration advised for external cohorts.\\
 
-\texttt{Conclusions}: We successfully developed and validated web-application for predicting reclassification risks, and risk based personalized biopsy decisions, in prostate cancer AS. Available for PRIAS, and largest five GAP3 database cohorts. Enables shared decision making of biopsy schedules by comparing fixed and personalized schedules on total biopsies and expected time delay in detection of reclassification.\\
+\texttt{Conclusions}: We successfully developed and validated a model for predicting upgrading risk, and providing risk based personalized biopsy decisions, in prostate cancer AS. The model made available via a web-application, enables shared decision making of biopsy schedules by comparing fixed and personalized schedules on total biopsies and expected time delay in detecting upgrading.\\
 
-\texttt{Patient Summary}: Reclassification risk based personalized biopsy schedules are novel alternative to fixed biopsy schedules. They are implemented in our web-application. May offer better balance between total biopsies and time delay in detection of reclassification than fixed schedules.
+\texttt{Patient Summary}: Personalized prostate biopsies are a novel alternative to fixed one-size-fits-all schedules. The underlying statistical models are made available through a user-friendly web-application and may help to reduce unnecessary prostate biopsies while maintaining cancer control.
 \end{abstract}
