--- a/report/clinical/supplementary/B_risk_prediction_validation.tex
+++ b/report/clinical/supplementary/B_risk_prediction_validation.tex
@@ -1,18 +1,18 @@
 % !TEX root =  ../supplementary.tex
-\section{Risk Predictions for Reclassification}
+\section{Risk Predictions for Upgrading}
 \label{sec:param_estimates_jm_fit_prias}
-Let us assume a new patient $j$, for whom we need to estimate the risk of reclassification. Let his current follow-up visit time be $s$, latest time of biopsy be $t$, observed vector PSA measurements be $\mathcal{Y}_{j}(s)$. The combined information from the observed data about the time of reclassification, is given by the following posterior predictive distribution $g(T^*_j)$ of his time $T^*_j$ of reclassification:
+Let us assume a new patient $j$, for whom we need to estimate the risk of upgrading. Let his current follow-up visit time be $s$, latest time of biopsy be $t$, observed vector PSA measurements be $\mathcal{Y}_{j}(s)$. The combined information from the observed data about the time of upgrading, is given by the following posterior predictive distribution $g(T^*_j)$ of his time $T^*_j$ of upgrading:
 \begin{equation*}
 \label{eq:post_pred_dist}
 \begin{aligned}
 g(T^*_j) &= p\big\{T^*_j \mid T^*_j > t, \mathcal{Y}_{j}(s), \mathcal{D}_n\big\}\\
 &= \int \int p\big(T^*_j \mid T^*_j > t, \boldsymbol{b}_j, \boldsymbol{\theta}\big)\\
-&\times p\big\{\boldsymbol{b}_j \mid T^*_j>t, \mathcal{Y}_{j}(s), \boldsymbol{\theta}\big\}p\big(\boldsymbol{\theta} \mid \mathcal{D}_n\big) \mathrm{d} \boldsymbol{b}_j \mathrm{d} \boldsymbol{\theta}.
+& \quad \times p\big\{\boldsymbol{b}_j \mid T^*_j>t, \mathcal{Y}_{j}(s), \boldsymbol{\theta}\big\}p\big(\boldsymbol{\theta} \mid \mathcal{D}_n\big) \mathrm{d} \boldsymbol{b}_j \mathrm{d} \boldsymbol{\theta}.
 \end{aligned}
 \end{equation*}
-The distribution $g(T^*_j)$ depends not only depends on the observed data of the patient $T^*_j > t, \mathcal{Y}_{j}(s)$, but also depends on the information from the PRIAS dataset $\mathcal{D}_n$. To this the the posterior distribution of random effects $\boldsymbol{b}_j$ and posterior distribution of the vector of all parameters $\boldsymbol{\theta}$ are utilized, respectively. The distribution $g(T^*_j)$ can be estimated as detailed in \citet{rizopoulos2017dynamic}. Since, majority of the prostate cancer patients may not obtain reclassification in the current follow-up period of PRIAS (thirteen years), $g(T^*_j)$ can only be estimated for a currently limited follow-up period.
+The distribution $g(T^*_j)$ depends not only depends on the observed data of the patient $T^*_j > t, \mathcal{Y}_{j}(s)$, but also depends on the information from the PRIAS dataset $\mathcal{D}_n$. To this the the posterior distribution of random effects $\boldsymbol{b}_j$ and posterior distribution of the vector of all parameters $\boldsymbol{\theta}$ are utilized, respectively. The distribution $g(T^*_j)$ can be estimated as detailed in \citet{rizopoulos2017dynamic}. Since, majority of the prostate cancer patients may not obtain upgrading in the current follow-up period of PRIAS (thirteen years), $g(T^*_j)$ can only be estimated for a currently limited follow-up period.
 
-The cumulative risk of reclassification can be derived from $g(T^*_j)$ as given in~\citep{rizopoulos2017dynamic}. It is given by:
+The cumulative risk of upgrading can be derived from $g(T^*_j)$ as given in~\citep{rizopoulos2017dynamic}. It is given by:
 \begin{equation}
 \label{eq:dynamic_risk_prob}
 R_j(u \mid t,s) = \mbox{Pr}\big\{T^*_j > u \mid T^*_j > t, \mathcal{Y}_{j}(s), \mathcal{D}_n\big\}, \quad u \geq t.
@@ -21,7 +21,7 @@ The personalized risk profile of the patient (see Panel~C, Figure~\ref{fig:dynri
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/dynrisk_plot_102.eps}}
-\caption{\textbf{Cumulative risk of (reclassification) changing dynamically over follow-up} as more patient data is gathered. The three \textbf{Panels~A,B~and~C:} are ordered by the time of the latest visit (dashed vertical black line) of a new patient. At each of the latest follow-up visits, we combine the accumulated PSA measurements (shown in blue), and latest time of negative biopsy (solid vertical green line) to obtain the updated cumulative risk profile (shown in red) of the patient.}
+\caption{\textbf{Cumulative risk of (upgrading) changing dynamically over follow-up} as more patient data is gathered. The three \textbf{Panels~A,B~and~C:} are ordered by the time of the latest visit (dashed vertical black line) of a new patient. At each of the latest follow-up visits, we combine the accumulated PSA measurements (shown in blue), and latest time of negative biopsy (solid vertical green line) to obtain the updated cumulative risk profile (shown in red) of the patient.}
 \label{fig:dynrisk_plot_102}
 \end{figure}
 
@@ -30,11 +30,11 @@ The personalized risk profile of the patient (see Panel~C, Figure~\ref{fig:dynri
 We wanted to check the usefulness of our model for not only the PRIAS patients but also for patients from other cohorts. To this end, we validated our model in the PRIAS dataset (internal validation) and in largest five cohorts from the GAP3 database~\citep{gap3_2018}. These are the University of Toronto AS (Toronto), Johns Hopkins AS (Hopkins), Memorial Sloan Kettering Cancer Center AS (MSKCC), King's College London AS (KCL), and Michigan Urological Surgery Improvement Collaborative AS (MUSIC).
 
 \textbf{\textit{Calibration-in-the-large}}
-We first assessed calibration-in-the-large~\citep{steyerberg2010assessing} of our model in the aforementioned cohorts. To this end, we used our model to predict the cumulative risk of reclassification for each patient given their PSA measurements and biopsy results. We then averaged the resulting profiles of cumulative risk of reclassification. Subsequently we compared the averaged cumulative-risk profile with a non-parametric estimate~\citep{turnbull1976empirical} of the cumulative risk of reclassification in each of the cohorts. The results are shown in Panel~A of Figure~\ref{fig:calib_before_after}. We can see that our model's calibration is fine only in PRIAS and Hopkins cohorts. To improve our model's calibration in KCL, MUSIC, Toronto, and MSKCC cohorts, we recalibrated the baseline hazard of the joint model fitted to the PRIAS dataset, individually for each of these cohorts. More specifically, given the data of an external cohort $\mathcal{D}_n^c$, where $c$ denotes the cohort, the recalibrated parameters $\boldsymbol{\gamma}_{h0}^c$ (\ref{sec:jm_framework}) of the log baseline hazard are given by:
+We first assessed calibration-in-the-large~\citep{steyerberg2010assessing} of our model in the aforementioned cohorts. To this end, we used our model to predict the cumulative risk of upgrading for each patient given their PSA measurements and biopsy results. We then averaged the resulting profiles of cumulative risk of upgrading. Subsequently we compared the averaged cumulative-risk profile with a non-parametric estimate~\citep{turnbull1976empirical} of the cumulative risk of upgrading in each of the cohorts. The results are shown in Panel~A of Figure~\ref{fig:calib_before_after}. We can see that our model's calibration is fine only in PRIAS and Hopkins cohorts. To improve our model's calibration in KCL, MUSIC, Toronto, and MSKCC cohorts, we recalibrated the baseline hazard of the joint model fitted to the PRIAS dataset, individually for each of these cohorts. More specifically, given the data of an external cohort $\mathcal{D}_n^c$, where $c$ denotes the cohort, the recalibrated parameters $\boldsymbol{\gamma}_{h0}^c$ (\ref{sec:jm_framework}) of the log baseline hazard are given by:
 \begin{equation}
 p(\boldsymbol{\gamma}_{h0}^c \mid \mathcal{D}_n^c, \boldsymbol{b^c},  \boldsymbol{\theta}) \propto  \prod_{i=1}^{n^c} p(l_i^c, r_i^c \mid \boldsymbol{b^c_i}, \boldsymbol{\theta}) p(\boldsymbol{\gamma}_{h0}^c)
 \end{equation}
-where $n^c$ are the number of patients in the $c$-th cohort and $\boldsymbol{\theta}$ are the parameters of the joint model fitted to the PRIAS dataset. The interval in which reclassification is observed for the $i-th$ patient is given by $l_i^c, r_i^c$, with $r_i^c = \infty$ for right censored patients. The symbol $\boldsymbol{b^c_i}$ denotes patient-specific random effects (\ref{sec:jm_framework}). The random effects are obtained using the joint model fitted to the PRIAS dataset prior to recalibration. We re-evaluated the calibration-in-the-large of our model after the recalibration of the baseline hazard individually for each cohort. The improved calibration-in-the-large is shown in Panel~B of Figure~\ref{fig:calib_before_after}.
+where $n^c$ are the number of patients in the $c$-th cohort and $\boldsymbol{\theta}$ are the parameters of the joint model fitted to the PRIAS dataset. The interval in which upgrading is observed for the $i-th$ patient is given by $l_i^c, r_i^c$, with $r_i^c = \infty$ for right censored patients. The symbol $\boldsymbol{b^c_i}$ denotes patient-specific random effects (\ref{sec:jm_framework}). The random effects are obtained using the joint model fitted to the PRIAS dataset prior to recalibration. We re-evaluated the calibration-in-the-large of our model after the recalibration of the baseline hazard individually for each cohort. The improved calibration-in-the-large is shown in Panel~B of Figure~\ref{fig:calib_before_after}.
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/calib_before_after.eps}}
@@ -44,23 +44,23 @@ where $n^c$ are the number of patients in the $c$-th cohort and $\boldsymbol{\th
 
 \clearpage
 \textbf{\textit{Recalibrated PRIAS Model Versus Individual Joint Models For Each Cohort}}
-We wanted to check if our recalibrated PRIAS model performed as good as a new joint model that could be fitted to the external cohorts. To this end, we predicted cumulative-risk of reclassification for each patient from each cohort using two different models, namely the recalibrated PRIAS model for that cohort, and a new joint model fitted to that cohort. The difference in predicted cumulative-risk of reclassification from these cohorts (Figure~\ref{fig:calib_insmall_after}) is quite small. The only exception is the MUSIC cohort in which individual risk predictions obtained from the recalibrated PRIAS model may differ from predictions from a newly fitted joint model, by more than 10\% in at least half of the patients.
+We wanted to check if our recalibrated PRIAS model performed as good as a new joint model that could be fitted to the external cohorts. To this end, we predicted cumulative-risk of upgrading for each patient from each cohort using two sets of models, namely the recalibrated PRIAS model for each cohort, and a new joint model fitted to each cohort. The difference in predicted cumulative-risk of upgrading from these models is shown in Figure~\ref{fig:calib_insmall_after}. We can see that the difference is smaller in those cohorts in which the effects of $\log_2 (\mbox{PSA} + 1)$ value and velocity were similar to that of PRIAS~(Table~\ref{tab:PSA_survival_all}). For example, the Hopkins cohort had parameter estimates similar to that of PRIAS and consequently the difference in predicted risks for this cohort is smallest. The opposite of this phenomenon holds true for the MUSIC and KCL cohorts.
  
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=0.85\columnwidth]{images/calib_insmall_after.eps}}
-\caption{\textbf{Comparison of predictions from recalibrated PRIAS model with individual joint models fitted to external cohorts:} On Y-axis we show the difference between predicted cumulative-risk of reclassification for individual patients using two models, namely the recalibrated PRIAS model for each cohort, and individual joint model fitted to each cohort. The maximum differences in each direction can be 100\% or -100\%. The figure shows that in all cohorts except the MUSIC cohort, the recalibrated PRIAS model predicts as good as a newly fitted joint model to each of the cohorts. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
+\caption{\textbf{Comparison of predictions from recalibrated PRIAS model with individual joint models fitted to external cohorts:} On Y-axis we show the difference between predicted cumulative-risk of upgrading for individual patients using two models, namely the recalibrated PRIAS model for each cohort, and individual joint model fitted to each cohort. The figure shows that the difference is smaller in those cohorts in which the effects of $\log_2 (\mbox{PSA} + 1)$ value and velocity were similar to that of PRIAS~(Table~\ref{tab:PSA_survival_all}). Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
 \label{fig:calib_insmall_after}
 \end{figure}
 
 \clearpage
 \textbf{\textit{Validation of Dynamic Cumulative-Risk Predictions}}
-As shown in Figure~\ref{fig:dynrisk_plot_102} the cumulative-risk predictions from the joint model are dynamic in nature. That is, they update as more data becomes available over time. Consequently, the discrimination and calibration of the joint model also depends on the available data. We assessed these two measures dynamically in the PRIAS cohort (interval validation) and in the largest five external cohorts that are part of the GAP3 database. For discrimination we utilized the time-varying area under the receiver operating characteristic curve or time-varying AUC~\citep{rizopoulos2017dynamic}. For time-varying calibration we assessed the mean absolute prediction error or MAPE~\citep{rizopoulos2017dynamic}. The AUC indicates how well the model discriminates between patients who experience reclassification and those do not. The MAPE indicates how accurately the model predicts reclassification. Both AUC and MAPE are restricted to $[0,1]$. However, it is preferred that AUC $>$ 0.5 because an AUC $\leq$ 0.5 indicates that the model performs worse than random discrimination. Ideally MAPE should be 0.
+As shown in Figure~\ref{fig:dynrisk_plot_102} the cumulative-risk predictions from the joint model are dynamic in nature. That is, they update as more data becomes available over time. Consequently, the discrimination and calibration of the joint model also depends on the available data. We assessed these two measures dynamically in the PRIAS cohort (interval validation) and in the largest five external cohorts that are part of the GAP3 database. For discrimination we utilized the time-varying area under the receiver operating characteristic curve or time-varying AUC~\citep{rizopoulos2017dynamic}. For time-varying calibration we assessed the mean absolute prediction error or MAPE~\citep{rizopoulos2017dynamic}. The AUC indicates how well the model discriminates between patients who experience upgrading and those do not. The MAPE indicates how accurately the model predicts upgrading. Both AUC and MAPE are restricted to $[0,1]$. However, it is preferred that AUC $>$ 0.5 because an AUC $\leq$ 0.5 indicates that the model performs worse than random discrimination. Ideally MAPE should be 0.
 
-We calculate AUC and MAPE in a time-dependent manner. More specifically, given the time of latest biopsy $t$, and history of PSA measurements up to time $s$, we calculate AUC and MAPE for a medically relevant time frame $(t, s]$, within which the occurrence of reclassification is of interest. In the case of prostate cancer, at any point in time $s$ it is of interest to identify patients who may have experienced reclassification in the last one year $(s-1, s]$. That is we set $t=s-1$. We then calculate AUC and MAPE at a gap of every six months (follow-up schedule of PRIAS). That is, $s \epsilon \{1, 1.5, \ldots \}$ years. To obtain reliable estimates of AUC and MAPE, in each cohort we restrict $s$ to a maximum time point $s_{\mbox{max}}$, such that there are at least 10 patients who experience reclassification after $s_{\mbox{max}}$. This maximum time point $s_{\mbox{max}}$ differs between cohorts, and is given in Table~\ref{tab:max_pred_time}.
+We calculate AUC and MAPE in a time-dependent manner. More specifically, given the time of latest biopsy $t$, and history of PSA measurements up to time $s$, we calculate AUC and MAPE for a medically relevant time frame $(t, s]$, within which the occurrence of upgrading is of interest. In the case of prostate cancer, at any point in time $s$ it is of interest to identify patients who may have experienced upgrading in the last one year $(s-1, s]$. That is we set $t=s-1$. We then calculate AUC and MAPE at a gap of every six months (follow-up schedule of PRIAS). That is, $s \epsilon \{1, 1.5, \ldots \}$ years. To obtain reliable estimates of AUC and MAPE, in each cohort we restrict $s$ to a maximum time point $s_{\mbox{max}}$, such that there are at least 10 patients who experience upgrading after $s_{\mbox{max}}$. This maximum time point $s_{\mbox{max}}$ differs between cohorts, and is given in Table~\ref{tab:max_pred_time}.
 
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{Maximum follow-up period up to which we can reliably predict risk of reclassification}. In each cohort, this time point is chosen such that there are at least 10 patients who experience reclassification after this time point. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
+\caption{\textbf{Maximum follow-up period up to which we can reliably predict risk of upgrading}. In each cohort, this time point is chosen such that there are at least 10 patients who experience upgrading after this time point. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
 \label{tab:max_pred_time}
 \begin{tabular}{l|r}
 \hline
@@ -77,17 +77,17 @@ Hopkins & 7\\
 \end{tabular}	
 \end{table}
 
-The results for estimates of AUC and MAPE are summarized in Figure~\ref{fig:auc_pe_recalib}, and in Table~\ref{tab:AUC_PE_PRIAS} to Table~\ref{tab:AUC_PE_MUSIC}. Results are based on the recalibrated PRIAS model for Toronto, MSKCC, MUSIC, and KCL cohorts, whereas original joint model fitted to the PRIAS dataset is used for Hopkins and PRIAS cohorts. The results show that AUC remains more or less constant in all cohorts as more data becomes available for patients. The AUC obtains a moderate value, roughly between 0.5 and 0.7 for all cohorts. On the other hand, MAPE reduces by a big margin after year two of follow-up. This could be because of two reasons. Firstly, MAPE at year one is based only on four PSA measurements gathered in first year of follow-up, whereas after year two number of PSA measurements increase. Secondly, patients in year one consist of two sub-populations, namely patients with a correct Gleason grade~1 at the time of inclusion in AS, and patients who probably had Gleason grade~2 at inclusion but were misclassified by the urologist as Gleason grade~1 patients. To remedy this problem, a biopsy for all patients at year one is commonly recommended in all AS programs~\citep{bokhorst2015compliance}.
+The results for estimates of AUC and MAPE are summarized in Figure~\ref{fig:auc_pe_recalib}, and in Table~\ref{tab:AUC_PE_PRIAS} to Table~\ref{tab:AUC_PE_MUSIC}. Results are based on the recalibrated PRIAS model for the GAP3 cohorts. The results show that AUC remains more or less constant in all cohorts as more data becomes available for patients. The AUC obtains a moderate value, roughly between 0.5 and 0.7 for all cohorts. On the other hand, MAPE reduces by a big margin after year two of follow-up. This could be because of two reasons. Firstly, MAPE at year one is based only on four PSA measurements gathered in first year of follow-up, whereas after year two number of PSA measurements increase. Secondly, patients in year one consist of two sub-populations, namely patients with a correct Gleason grade~1 at the time of inclusion in AS, and patients who probably had Gleason grade~2 at inclusion but were misclassified by the urologist as Gleason grade~1 patients. To remedy this problem, a biopsy for all patients at year one is commonly recommended in all AS programs~\citep{bokhorst2015compliance}.
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/auc_pe_recalib.eps}}
-\caption{\textbf{Validation of Dynamic Cumulative-Risk Predictions}. In \textbf{Panel~A} we can see that the time dependent area under the receiver operating characteristic curve or AUC (measure of discrimination) is above 0.5 in PRIAS (internal validation), and in Toronto, Hopkins, MSKCC, KCL, and MUSIC AS cohorts (external validation). In \textbf{Panel~B} we can see that the time dependent root mean squared prediction error or MAPE (measure of calibration) is similar for PRIAS, and Hopkins and Toronto cohorts. The bootstrapped 95\% confidence interval for these estimates are presented in Table~\ref{tab:AUC_PE_PRIAS} to Table~\ref{tab:AUC_PE_KCL}. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
+\caption{\textbf{Validation of Dynamic Cumulative-Risk Predictions}. In \textbf{Panel~A} we can see that the time dependent area under the receiver operating characteristic curve or AUC (measure of discrimination) is above 0.5 in PRIAS (internal validation), and in Toronto, Hopkins, MSKCC, KCL, and MUSIC AS cohorts (external validation). In \textbf{Panel~B} we can see that the time dependent root mean squared prediction error or MAPE (measure of calibration) is similar for PRIAS and Hopkins cohorts. The bootstrapped 95\% confidence interval for these estimates are presented in Table~\ref{tab:AUC_PE_PRIAS} to Table~\ref{tab:AUC_PE_KCL}. Full names of Cohorts are \textit{PRIAS}: Prostate Cancer International Active Surveillance, \textit{Toronto}: University of Toronto Active Surveillance, \textit{Hopkins}: Johns Hopkins Active Surveillance, \textit{MSKCC}: Memorial Sloan Kettering Cancer Center Active Surveillance, \textit{KCL}: King's College London Active Surveillance, \textit{MUSIC}: Michigan Urological Surgery Improvement Collaborative Active Surveillance.}
 \label{fig:auc_pe_recalib}
 \end{figure}
 
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{Internal validation of predictions of reclassification in PRIAS cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
+\caption{\textbf{Internal validation of predictions of upgrading in PRIAS cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
 \label{tab:AUC_PE_PRIAS}
 \begin{tabular}{r|r|r}
 \hline
@@ -111,7 +111,7 @@ Follow-up period (years) & AUC (95\% CI) & MAPE (95\%CI)\\
 
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{External validation of predictions of reclassification in University of Toronto Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
+\caption{\textbf{External validation of predictions of upgrading in University of Toronto Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
 \label{tab:AUC_PE_Toronto}
 \begin{tabular}{r|r|r}
 \hline
@@ -139,7 +139,7 @@ Follow-up period (years) & AUC (95\% CI) & MAPE (95\%CI)\\
 
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{External validation of predictions of reclassification in Johns Hopkins Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
+\caption{\textbf{External validation of predictions of upgrading in Johns Hopkins Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
 \label{tab:AUC_PE_Hopkins}
 \begin{tabular}{r|r|r}
 \hline
@@ -165,7 +165,7 @@ Follow-up period (years) & AUC (95\% CI) & MAPE (95\%CI)\\
 
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{External validation of predictions of reclassification in Memorial Sloan Kettering Cancer Center Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
+\caption{\textbf{External validation of predictions of upgrading in Memorial Sloan Kettering Cancer Center Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
 \label{tab:AUC_PE_MSKCC}
 \begin{tabular}{r|r|r}
 \hline
@@ -189,7 +189,7 @@ Follow-up period (years) & AUC (95\% CI) & MAPE (95\%CI)\\
 
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{External validation of predictions of reclassification in King's College London Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
+\caption{\textbf{External validation of predictions of upgrading in King's College London Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
 \label{tab:AUC_PE_KCL}
 \begin{tabular}{r|r|r}
 \hline
@@ -205,11 +205,9 @@ Follow-up period (years) & AUC (95\% CI) & MAPE (95\%CI)\\
 \end{tabular}	
 \end{table}
 
-
-
 \begin{table}[!htb]
 \small\sf\centering
-\caption{\textbf{External validation of predictions of reclassification in Michigan Urological Surgery Improvement Collaborative Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
+\caption{\textbf{External validation of predictions of upgrading in Michigan Urological Surgery Improvement Collaborative Active Surveillance cohort}. The area under the receiver operating characteristic curve or AUC (measure of discrimination) and mean absolute prediction error or MAPE (measure of calibration) are calculated over the follow-up period at a gap of 6 months. In addition bootstrapped 95\% confidence intervals (CI) are also presented.}
 \label{tab:AUC_PE_MUSIC}
 \begin{tabular}{r|r|r}
 \hline
