--- a/report/clinical/mainmatter/conclusion.tex
+++ b/report/clinical/mainmatter/conclusion.tex
@@ -1,3 +1,8 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Conclusions}
-We developed a web-application (\url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}) for assisting patients/doctors in making biopsy decisions during prostate cancer AS. Our web-application provides the patient's current and future risks of reclassification, and personalized biopsy schedules based on this risk. Currently supported cohorts are the world's largest AS cohort PRIAS (model development), and the largest five GAP3 database cohorts (model external validation). Risk prediction accuracy in validation cohorts was better only if they had the rate of reclassification similar to PRIAS. Our web-application enables shared decision making of biopsy schedule by comparing fixed and personalized schedules on the total biopsies and expected time delay in detection of reclassification.
+Prediction tool for risk of upgrading presented in a web-based application (\url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}), for assisting patients/doctors in making biopsy decisions during prostate cancer AS. Our web-application provides the patient's current and future risks of upgrading, and personalized biopsy schedules based on this risk. Our web-application enables shared decision making of biopsy schedule by comparing fixed and personalized schedules on the total biopsies and expected time delay in detection of upgrading.
+
+Currently supported cohorts are the world’s largest AS cohort PRIAS (model development), and the largest five GAP3 database cohorts (model external validation). Risk prediction accuracy in validation cohorts was better only if they had the rate of reclassification similar to PRIAS
+
+Instead of mentionre currently supported cohorts say:
+Not in conclusion, more a general remarks that calibration to a specific setting is adviasble or something like that. 
