--- a/report/clinical/mainmatter/discussion.tex
+++ b/report/clinical/mainmatter/discussion.tex
@@ -1,11 +1,15 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Discussion}
-We developed a web-application for assisting patients/doctors in making biopsy decisions during prostate cancer active surveillance (AS). Our web-application provides the patient's current and future risks of reclassification (increase in Gleason grade~\citep{epsteinGG2014} from grade~1 to 2 or higher), and personalized biopsy schedules based on this risk. Our work has four novel features over earlier risk calculators~\citep{coley2017prediction,ankerst2015precision}. First, for personalized biopsy schedules, we developed a statistical model using the world's largest AS dataset PRIAS. Second, for following any biopsy schedule, fixed or personalized, our model predicts the corresponding time delay in detection of reclassification (less is beneficial). Thus, patients/doctors can compare schedules before making a choice. Third, we externally validated our model in the largest five GAP3 database~\citep{gap3_2018} AS cohorts. Fourth, we implemented our methodology in a web-application (\url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}) for PRIAS and validated GAP3 cohorts.
+First mention overall result and performance… 
 
-Currently, biopsies are decided either according to fixed schedules (e.g.,~annual biopsies) or utilize PSA. Both approaches have drawbacks~\citep{vickers2009psavelocity,bokhorst2015compliance}. In particular, PSA has not been exploited fully and correctly. For example, using observed PSA is incorrect because it has measurement error. Other approaches utilize only the latest PSA, and/or when they utilize all PSA data, they assume constant PSA velocity. In contrast, our model employs all PSA measurements to build a patient-specific profile of PSA. This profile is allowed to increase/decrease non-linearly over time (non-constant PSA velocity). Subsequently, the model consolidates the PSA profile, previous biopsy results, and baseline characteristics of a patient, into a single personalized risk of reclassification. This risk also gets updated as more patient data becomes available over follow-up. Due to currently limited magnetic resonance imaging (MRI) data, we could not incorporate it into our model. However, MRI data can be added as a predictor in our model in the future. Decisions based on information combined from multiple sources can yield better results than based on MRI or PSA alone.
+We developed a web-application for assisting patients/doctors in making biopsy decisions during prostate cancer active surveillance (AS). Our web-application provides the patient's current and future risks of upgrading (increase in Gleason grade~\citep{epsteinGG2014} from grade~1 to 2 or higher), and personalized biopsy schedules based on this risk. Our work has four novel features over earlier risk calculators~\citep{coley2017prediction,ankerst2015precision}. First, for personalized biopsy schedules, we developed a statistical model using the world's largest AS dataset PRIAS. Second, for following any biopsy schedule, fixed or personalized, our model predicts the corresponding time delay in detection of upgrading (less is beneficial). Thus, patients/doctors can compare schedules before making a choice. Third, we externally validated our model in the largest five GAP3 database~\citep{gap3_2018} AS cohorts. Fourth, we implemented our methodology in a web-application (\url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}) for PRIAS and validated GAP3 cohorts.
 
-Our model is useful for a large number of patients from PRIAS (model development), and the largest five GAP3 database AS cohorts (model external validation). These are the University of Toronto AS, Johns Hopkins AS, Memorial Sloan Kettering Cancer Center AS, King's College London AS, and Michigan Urological Surgery Improvement Collaborative AS. During validation, we required recalibration of our model's baseline hazard of reclassification, individually for all validation cohorts. Our model's prediction error was moderate in cohorts with rate of reclassification similar to PRIAS, and large otherwise. Both prediction error and AUC can be improved with newer biomarkers or MRI data in the future.
+Currently, biopsies are decided either according to fixed schedules (e.g.,~annual biopsies) or utilize PSA. Both approaches have drawbacks~\citep{vickers2009psavelocity,bokhorst2015compliance}. In particular, PSA has not been exploited fully and correctly. For example, using observed PSA is incorrect because it has measurement error. Other approaches utilize only the latest PSA, and/or when they utilize all PSA data, they assume constant PSA velocity. In contrast, our model employs all PSA measurements to build a patient-specific profile of PSA. This profile is allowed to increase/decrease non-linearly over time (non-constant PSA velocity). Subsequently, the model consolidates the PSA profile, previous biopsy results, and baseline characteristics of a patient, into a single personalized risk of upgrading. This risk also gets updated as more patient data becomes available over follow-up. Due to currently limited magnetic resonance imaging (MRI) data, we could not incorporate it into our model. However, MRI data can be added as a predictor in our model in the future. Decisions based on information combined from multiple sources can yield better results than based on MRI or PSA alone. 
 
-Our work has important clinical implications. The rate of reclassification after five years of follow-up was at most 50\% in all cohorts (Figure~\ref{fig:auc_beforecalib}). That is, a large number of patients do not require any biopsy during the first five years of follow-up. Given the non-compliance and burden of frequent biopsies~\citep{bokhorst2015compliance}, the availability of our methodology as a web-application may encourage patients/doctors to consider personalized schedules instead. To assist them in this decision making, the web-application provides an estimate of time delay in detection of reclassification for both personalized and fixed schedules, in a personalized manner. We hope this will objectively address patient apprehensions regarding adverse outcomes in AS.
+MRI is used a lot today and more and more before the first biopsy and a lot in AS patients to avoid re-biopsy. I would suggest to write that it is used in revised protocols and that the value of it is still to be determined when more follow-up data has been collected.
 
-This work has certain limitations. Due to currently limited follow-up period of PRIAS and GAP3 cohorts, the proposed model is valid only for a restricted period (Table 12, Supplementary~C). This problem can be mitigated by refitting the model with new follow-up data in the future. While we focused only on reclassification, the number of positive biopsy cores can also be used to trigger treatment. We did not consider such additional criteria because they differ between cohorts~\citep{nieboer2018active}, whereas reclassification is used widely. Reclassification is susceptible to inter-observer variation too. Models which account for this variation~\citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology for personalized scheduling, and for comparison of various schedules need not change.
+Our model is useful for a large number of patients from PRIAS (model development), and the largest five GAP3 database AS cohorts (model external validation). These are the University of Toronto AS, Johns Hopkins AS, Memorial Sloan Kettering Cancer Center AS, King's College London AS, and Michigan Urological Surgery Improvement Collaborative AS. During validation, we required recalibration of our model's baseline hazard of upgrading, individually for all validation cohorts. Our model's prediction error was moderate in cohorts with rate of upgrading similar to PRIAS, and large otherwise. Both prediction error and AUC can be improved with newer biomarkers or MRI data in the future.
+
+Our work has important clinical implications. The rate of upgrading after five years of follow-up was at most 50\% in all cohorts (Figure~\ref{fig:auc_beforecalib}). That is, a large number of patients do not require any biopsy during the first five years of follow-up. Given the non-compliance and burden of frequent biopsies~\citep{bokhorst2015compliance}, the availability of our methodology as a web-application may encourage patients/doctors to consider personalized schedules instead. To assist them in this decision making, the web-application provides an estimate of time delay in detection of upgrading for both personalized and fixed schedules, in a personalized manner. We hope this will objectively address patient apprehensions regarding adverse outcomes in AS.
+
+This work has certain limitations. Due to currently limited follow-up period of PRIAS and GAP3 cohorts, the proposed model is valid only for a restricted period (Table 12, Supplementary~C). This problem can be mitigated by refitting the model with new follow-up data in the future. While we focused only on upgrading, the number of positive biopsy cores can also be used to trigger treatment. We did not consider such additional criteria because they differ between cohorts~\citep{nieboer2018active}, whereas upgrading is used widely. Upgrading is susceptible to inter-observer variation too. Models which account for this variation~\citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology for personalized scheduling, and for comparison of various schedules need not change.
