--- a/report/clinical/mainmatter/study_cohort.tex
+++ b/report/clinical/mainmatter/study_cohort.tex
@@ -5,18 +5,18 @@
 \label{subsec:cohort}
 For developing a statistical model to power our web-application, we used the Prostate Cancer International Active Surveillance (PRIAS) database. It is an ongoing (December~2006~--~to date) prospective cohort study of men with low- and very-low risk prostate cancer diagnoses~\citep{bul2013active}. More than 100 medical centers from 17 countries contributed to PRIAS, using a common protocol (\url{https://www.prias-project.org}). Upon inclusion in PRIAS, PSA was measured quarterly for the first two years of follow-up and semiannually thereafter. Biopsies were scheduled at year one, four, seven, and ten of follow-up. Additional yearly biopsies were scheduled when PSA doubling time was between zero and ten years.
 
-We selected all 7813 patients who had Gleason grade~1~\citep{epsteinGG2014} at the time of inclusion in PRIAS (Table~\ref{table:prias_summary}). Our primary event of interest is increase in this Gleason grade upon repeat biopsy, called \textit{reclassification} (1134 patients). Reclassification is a trigger for treatment advice in PRIAS. Although, 2250 patients were provided treatment on the basis of their PSA, or number of biopsy cores with cancer, or anxiety/other reasons. Our reasons for focusing solely on reclassification are, namely, reclassification is strongly associated with cancer-related outcomes, and other triggers for treatment vary between cohorts.
+We selected all 7813 patients who had Gleason grade group~1~\citep{epsteinGG2014} at the time of inclusion in PRIAS (Table~\ref{table:prias_summary}). Our primary event of interest is increase in this Gleason grade group upon repeat biopsy, called \textit{upgrading} (1134 patients). Upgrading is a trigger for treatment advice in PRIAS. Although, 2250 patients were provided treatment on the basis of their PSA, or number of biopsy cores with cancer, or anxiety/other reasons. Our reasons for focusing solely on upgrading are, namely, upgrading is strongly associated with cancer-related outcomes, and other triggers for treatment vary between cohorts.
 
 \begin{table}
 \small\sf\centering
-\caption{\textbf{Summary of the PRIAS dataset}. The primary event of interest is reclassification, that is, increase in Gleason grade from grade~1 to 2 or higher. IQR:~interquartile range, PSA:~prostate-specific antigen.}
+\caption{\textbf{Summary of the PRIAS dataset}. The primary event of interest is upgrading, that is, increase in Gleason grade group from group~1 to 2 or higher. IQR:~interquartile range, PSA:~prostate-specific antigen.}
 \label{table:prias_summary}
 \begin{tabular}{lr}
 \toprule
 \textbf{Characteristic} & \textbf{Value}\\
 \midrule
 Total patients & 7813\\
-Reclassification (primary event) & 1134\\
+Upgrading (primary event) & 1134\\
 Treatment & 2250\\
 Watchful waiting & 334\\
 Loss to follow-up & 249\\
